[tool.poetry]
name = "preacher"
version = "0.15.8"
description = "Web API Verification without Coding."
authors = ["Yu Mochizuki <ymoch.dev@gmail.com>"]
readme = "README.md"
homepage = "https://preacher.readthedocs.io/"
repository = "https://github.com/ymoch/preacher"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Monitoring"
]

[tool.poetry.scripts]
preacher-cli = "preacher.app.cli.main:main"

[tool.poetry.plugins.preacher]
preacher-plugin-default = "preacher.plugin.impl"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.1"
pyhamcrest = "^2.0"
requests = "^2.21"
jq = "^1.1.2"
lxml = "^4.4"
yamlen = "^0.1.0"
click = "^8.0.1"
colorama = "^0.4.1"
pluggy = "^0.13.1"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-flake8 = "^1.0.7"
pytest-mccabe = "^2.0"
pytest-mypy = "^0.8.1"
pytest-cov = "^2.12.1"
types-python-dateutil = "^0.1.2"
types-pyyaml = "^0.1.6"
types-requests = "^0.1.9"
black = "^21.7b0"
flask = "^2.0.1"
sphinx = "^4.1.2"
sphinx-intl = "^2.0.1"
tomli = "^1.2.1"
codecov = "^2.1.12"

[tool.pytest.ini_options]
testpaths = ["preacher", "tests"]
flake8-max-line-length = 99
mccabe-complexity = 10
addopts = [
  "--flake8",
  "--mypy",
  "--mypy-ignore-missing-imports",
  "--mccabe",
  "--cov=preacher",
  "--cov-report=term-missing",
]

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
