[tool.poetry]
name = "preacher"
version = "0.15.11"
description = "Web API Verification without Coding."
authors = ["Yu Mochizuki <ymoch.dev@gmail.com>"]
readme = "README.md"
homepage = "https://preacher.readthedocs.io/"
repository = "https://github.com/ymoch/preacher"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Monitoring"
]

[tool.poetry.scripts]
preacher-cli = "preacher.app.cli.main:main"

[tool.poetry.plugins.preacher]
preacher-plugin-default = "preacher.plugin.impl"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.1"
pyhamcrest = "^2.0"
requests = "^2.21"
jq = "^1.1.2"
lxml = "^4.4"
yamlen = "^0.2"
click = "^8.0.1"
colorama = "^0.4.1"
pluggy = "^1.0.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-flake8 = "^1.1.1"
pytest-mccabe = "^2.0"
pytest-mypy = "^0.9.1"
pytest-cov = "^3.0.0"
types-python-dateutil = "^2.8.1"
types-pyyaml = "^6.0"
types-requests = "^2.21"
black = "^22.3.0"
flask = "^2.1.2"
sphinx = "<4.4.0"  # to avoid confliction of `importlib-metadata`.
sphinx-intl = "^2.0.1"
codecov = "^2.1.12"

[tool.pytest.ini_options]
testpaths = ["preacher", "tests"]
flake8-max-line-length = 99
mccabe-complexity = 10
addopts = [
  "--flake8",
  "--mypy",
  "--mypy-ignore-missing-imports",
  "--mccabe",
  "--cov=preacher",
  "--cov-report=term-missing",
]

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
